--- a/themes/nofancy/layouts/partials/header.html
+++ b/themes/nofancy/layouts/partials/header.html
@@ -3,9 +3,9 @@
 
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>{{ .Title }}</title>
   <meta name="description" content="{{ .Title }}">
   <meta name="author" content="{{ .Site.Author.name }}">
+  <link rel="shortcut icon" type="image/x-icon" href="{{ .Site.BaseUrl }}/images/favicon.ico"/>
 
   <!-- Mobile Specific Metas –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
