--- a/themes/nofancy/layouts/_default/single.html
+++ b/themes/nofancy/layouts/_default/single.html
@@ -1,6 +1,8 @@
 {{ partial "header.html" . }}
 {{ partial "navbar.html" . }}
 
+<title>{{ .Title }} - {{ .Site.Title }}</title>
+
 <div class="container post-wrapper">
   <div class="row">
 	<div class="eight columns offset-by-two">
@@ -30,6 +32,7 @@
 
 	  <div class="post">
 		{{ .Content }}
+    <p><a href="https://twitter.com/share" class="twitter-share-button" data-via="dceoy">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
 	  </div>
 	</div>
   </div>
