--- a/themes/nofancy/layouts/_default/single.html
+++ b/themes/nofancy/layouts/_default/single.html
@@ -1,8 +1,6 @@
 {{ partial "header.html" . }}
 {{ partial "navbar.html" . }}
 
-<title>{{ .Title }} - {{ .Site.Title }}</title>
-
 <div class="pure-g">
     <div class="pure-u-1-24 pure-u-md-5-24"></div>
 	<div class="pure-u-11-12 pure-u-md-5-8">
@@ -27,8 +25,7 @@
                     series:{{ range .Params.series }}<a href="{{ $baseurl }}series/{{ . | urlize }}">{{ . }}</a> {{ end }}
                     {{ end }}
                 </p>
-                <br>
-                <h1>{{ .Title }}</h1>
+                <h1>{{ if .Draft }}DRAFT: {{end}}{{ .Title }}</h1>
             </div>
 
             <div class="post-content">
