--- a/themes/nofancy/layouts/partials/header.html
+++ b/themes/nofancy/layouts/partials/header.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
 
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
+  <title>{{ .Title }} - {{ .Site.Title }}</title>
   <meta name="description" content="{{ .Title }}">
   <meta name="author" content="{{ .Site.Author.name }}">
   <link rel="shortcut icon" type="image/x-icon" href="{{ .Site.BaseURL }}images/favicon.ico"/>
@@ -15,13 +17,13 @@
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/fonts.css">
   
   <!-- CSS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="https://cdn.rawgit.com/yahoo/pure-release/v0.6.0/pure-min.css">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.1/build/pure-min.css" integrity="sha384-CCTZv2q9I9m3UOxRLaJneXrrqKwUNOzZ6NGEUMwHtShDJ+nCoiXJCAgi05KfkLGY" crossorigin="anonymous">
   <!--[if lte IE 8]>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/yahoo/pure-release/v0.6.0/grids-responsive-old-ie-min.css">
-<![endif]-->
-<!--[if gt IE 8]><!-->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/yahoo/pure-release/v0.6.0/grids-responsive-min.css">
-<!--<![endif]-->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.1/build/grids-responsive-old-ie-min.css">
+  <![endif]-->
+  <!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.1/build/grids-responsive-min.css">
+  <!--<![endif]-->
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/custom.css">
 
   <!--- highlight js -->
@@ -33,5 +35,7 @@
   <script src="{{ .Site.BaseURL }}highlight/highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
 
+  {{ .Hugo.Generator }}
+  
 </head>
 <body>
