--- a/themes/nofancy/layouts/partials/footer.html
+++ b/themes/nofancy/layouts/partials/footer.html
@@ -50,8 +50,8 @@
 </div>
 
 
-<script src="{{ .Site.BaseURL }}js/jquery.min.js" type="text/javascript"></script>
-<script src="{{ .Site.BaseURL }}js/jquery.timeago.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/latest/jquery.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.6.7/jquery.timeago.min.js" type="text/javascript"></script>
 <script type="text/javascript">
   $(function(){
     $("time.timeago").timeago();
